# stormy-rs

./: Cargo.toml  config.toml
src/: main.rs
src/dark_sky/: error.rs  mod.rs  query.rs  response.rs
src/formatters/: standard.rs
src/open_weather_map/: error.rs  mod.rs  query.rs  response.rs
src/serde_utils/: mod.rs
