[package]
name = "bawtv2"
version = "0.1.0"
authors = ["Trey Dempsey <trey.dempsey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.12"
irc = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-core = "0.1"
